--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
           class="search"
         />
       </span>
+
       <div class="switch">
-        <img src="images/Temperature - switch.png" class="temp-switch" />
+        <label>
+          <span class="C"> °C </span>
+          <span class="F"> °F </span>
+        </label>
       </div>
     </header>
 
